feat: add chapters 9-10, quizzes, and visual enhancements
- Add Chapter 9: Class (Abstract, Interface, Class Diagram)
- Add Chapter 10: Exceptions (try-catch, throw, throws, finally)
- Add quiz-09-class.html (30 questions)
- Add quiz-10-exceptions.html (30 questions)
- Add visual CSS components: VS cards, flow diagrams, feature cards, hierarchy trees, styled tables
- Update index.html with new lesson/quiz cards and stats
- Update navigation links and lesson tracking

--- a/08-inheritance.html
+++ b/08-inheritance.html
@@ -302,7 +302,7 @@ clone()         <span class="comment">// คัดลอก Object</span></code>
 
             <div class="nav-links">
                 <a href="07-uml-diagrams.html">← บทที่ 7: UML Diagrams</a>
-                <a href="index.html">กลับหน้าแรก →</a>
+                <a href="09-class.html">บทที่ 9: Class ขั้นสูง →</a>
             </div>
         </article>
     </main>
