--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <main>
         <div class="hero">
             <h1>เตรียมสอบ <span>Java</span> กันเถอะ! 🚀</h1>
-            <p>รวมเนื้อหาที่ติวกันไว้ทั้งหมด ตั้งแต่พื้นฐานจนถึง OOP และ Inheritance พร้อมแบบทดสอบ 240 ข้อ</p>
+            <p>รวมเนื้อหาที่ติวกันไว้ทั้งหมด ตั้งแต่พื้นฐานจนถึง OOP, Inheritance และ Exceptions พร้อมแบบทดสอบ 300 ข้อ
+            </p>
             <div class="exam-alert">📅 สอบอาทิตย์หน้า - สู้ๆ นะ!</div>
 
             <div class="leader-cheer" style="margin-top: 35px; animation: hoverLeader 3s infinite ease-in-out;">
@@ -57,11 +58,11 @@
             <div class="stats">
                 <div class="stat-card">
                     <div class="stat-number" id="lessons-completed">0</div>
-                    <div class="stat-label">บทเรียนที่อ่านแล้ว / 8</div>
+                    <div class="stat-label">บทเรียนที่อ่านแล้ว / 10</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-number" id="questions-answered">0</div>
-                    <div class="stat-label">ข้อสอบที่ทำแล้ว / 240</div>
+                    <div class="stat-label">ข้อสอบที่ทำแล้ว / 300</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-number">3</div>
@@ -135,6 +136,21 @@
                     </div>
                     <span class="lesson-badge exam-badge">⭐ ออกสอบแน่!</span>
                 </a>
+                <a href="09-class.html" class="lesson-card lesson-6">
+                    <div class="lesson-number">9</div>
+                    <div class="lesson-content">
+                        <h3>Class ขั้นสูง</h3>
+                        <p>Abstract Class, Interface, Class Diagram</p>
+                    </div>
+                    <span class="lesson-badge exam-badge">⭐ ออกสอบแน่!</span>
+                </a>
+                <a href="10-exceptions.html" class="lesson-card lesson-3">
+                    <div class="lesson-number">10</div>
+                    <div class="lesson-content">
+                        <h3>Exceptions</h3>
+                        <p>try-catch, throw, throws, finally</p>
+                    </div>
+                </a>
             </div>
 
             <h2 id="quizzes">🎯 แบบทดสอบ</h2>
@@ -197,6 +213,21 @@
                         <p>30 ข้อ | extends, super, abstract</p>
                     </div>
                     <span class="lesson-badge exam-badge">⭐ สำคัญที่สุด!</span>
+                </a>
+                <a href="quiz-09-class.html" class="lesson-card quiz-card lesson-6">
+                    <div class="lesson-number">🎯</div>
+                    <div class="lesson-content">
+                        <h3>Quiz: Class ขั้นสูง</h3>
+                        <p>30 ข้อ | Abstract, Interface, Diagram</p>
+                    </div>
+                    <span class="lesson-badge exam-badge">⭐ สำคัญที่สุด!</span>
+                </a>
+                <a href="quiz-10-exceptions.html" class="lesson-card quiz-card lesson-3">
+                    <div class="lesson-number">🎯</div>
+                    <div class="lesson-content">
+                        <h3>Quiz: Exceptions</h3>
+                        <p>30 ข้อ | try-catch, throw, throws</p>
+                    </div>
                 </a>
             </div>
         </div>
