--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                         <h3>Exceptions</h3>
                         <p>try-catch, throw, throws, finally</p>
                     </div>
+                    <span class="lesson-badge exam-badge">⭐ ออกสอบแน่!</span>
                 </a>
             </div>
 
@@ -228,6 +229,7 @@
                         <h3>Quiz: Exceptions</h3>
                         <p>30 ข้อ | try-catch, throw, throws</p>
                     </div>
+                    <span class="lesson-badge exam-badge">⭐ สำคัญที่สุด!</span>
                 </a>
             </div>
         </div>
